# llm-web-chat

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  input.css  tailwind.config.js
cargo/: config.toml
src/: app.rs  bytes_line_stream.rs  main.rs  ollama.rs
