[package]
name = "tailwind-csr-trunk"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
console_error_panic_hook = { version = "0.1.7" }
uuid = { version = "1.18.1", features = ["js", "v4"] }
gloo-timers = { version = "0.3.0", features = ["futures", "futures-core"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
pin-project-lite = "0.2.16"
bytes = "1.10.1"
serde_json = "1.0.145"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
